Capture data from form and add to cards array
Add new card property to data. Add methods property to Vue object. Add v-model directive to each input to bind data to properties in newCard. Create saveItem method to push data gathered as newCard to cards array when save card button is clicked and to clear newCard of data. Add basic styling to page.

--- a/main.css
+++ b/main.css
@@ -1,3 +1,38 @@
 body {
-    padding: 2vw;
+    background: aliceblue;
+    margin: 0;
+    height: 100%;
+}
+#vueCards {
+    min-height: 1080px;
+}
+header {
+    background: white;
+    padding: 1vw;
+    box-shadow: 0 3px 10px rgba(0,0,0,0.5);
+}
+h1 {
+    margin: 0 0 20px;
+}
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 1vw;
+    padding: 1vw;
+}
+.card-display {
+    padding: 1vw;
+    border-radius: 20px;
+    background: white;
+    border: 1px solid grey;
+}
+.card-date {
+    font-size: 12px;
+}
+.card-name {
+    font-size: 16px;
+}
+.card-text {
+    font-size: 18px;
+    line-height: 1.3;
 }
