--- a/main.css
+++ b/main.css
@@ -14,6 +14,21 @@ header {
 h1 {
     margin: 0 0 20px;
 }
+.card-form {
+    width: 25%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+input,
+textarea {
+    border-radius: 5px;
+    outline: none;
+    border: 1px solid gray;
+    padding: 0.2vw;
+    flex: 0 1 100%;
+    margin: 10px 0;
+}
 .card-container {
     display: grid;
     grid-template-columns: repeat(3,1fr);
