--- a/main.css
+++ b/main.css
@@ -1,18 +1,31 @@
 body {
-    background: aliceblue;
+    background: #f3f3f3;
     margin: 0;
     height: 100%;
-}
-#vueCards {
-    min-height: 1080px;
+    font-family: 'Dosis', sans-serif;
 }
 header {
-    background: white;
+    background: #94618e;
     padding: 1vw;
     box-shadow: 0 3px 10px rgba(0,0,0,0.5);
 }
 h1 {
     margin: 0 0 20px;
+    color: #f8eee7;
+}
+h2 {
+    color: #49274a;
+}
+button {
+    background: #49274a;
+    border: none;
+    border-radius: 5px;
+    color: #f8eee7;
+    font-family: 'Dosis', sans-serif;
+    padding: 10px;
+}
+button:focus {
+    outline: none;
 }
 .card-form {
     width: 25%;
@@ -28,18 +41,28 @@ textarea {
     padding: 0.2vw;
     flex: 0 1 100%;
     margin: 10px 0;
+    font-family: 'Dosis', sans-serif;
 }
 .card-container {
     display: grid;
     grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(3,min-content);
     grid-gap: 1vw;
     padding: 1vw;
+    min-height: 640px;
 }
 .card-display {
     padding: 1vw;
     border-radius: 20px;
     background: white;
     border: 1px solid grey;
+}
+.card-none {
+    grid-column: 1 / span 3;
+    text-align: center;
+}
+img {
+    max-width: 100%;
 }
 .card-date {
     font-size: 12px;
@@ -50,4 +73,17 @@ textarea {
 .card-text {
     font-size: 18px;
     line-height: 1.3;
+}
+footer {
+    box-shadow: 0 -3px 10px rgba(0,0,0,0.2);
+    padding: 1vw;
+    background: #94618e;
+    color: #f8eee7;
+}
+a {
+    text-decoration: none;
+    color: #49274a;
+}
+a:hover {
+    text-decoration: underline;
 }
